<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/add_lecture_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="10dp"
	android:orientation="vertical"
	tools:context=".AddLectureActivity">

	<TextView
		android:id="@+id/textView5"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="center"
		android:text="@string/add_lecture_new_lecture"
		android:textColor="@color/cardview_dark_background"
		android:textSize="30sp"
		android:textStyle="bold" />

	<EditText
		android:id="@+id/add_lecture_lecture_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:hint="@string/add_lecture_lecture_name"
		android:importantForAutofill="no"
		android:inputType="text" />

	<EditText
		android:id="@+id/add_lecture_teacher_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:hint="@string/add_lecture_teacher_name"
		android:importantForAutofill="no"
		android:inputType="text" />

	<EditText
		android:id="@+id/add_lecture_code"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:hint="@string/add_lecture_course_code"
		android:importantForAutofill="no"
		android:inputType="text" />

	<EditText
		android:id="@+id/add_lecture_classroom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:hint="@string/add_lecture_classroom"
		android:importantForAutofill="no"
		android:inputType="text" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView6"
			android:layout_width="91dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/add_lecture_day_of_week" />

		<Spinner
			android:id="@+id/add_lecture_day"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:entries="@array/daysOfWeek" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/add_lecture_start_time" />

		<Spinner
			android:id="@+id/add_lecture_startHour"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:entries="@array/hours" />

		<Spinner
			android:id="@+id/add_lecture_startMinute"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:entries="@array/minutes" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/add_lecture_end_time" />

		<Spinner
			android:id="@+id/add_lecture_endHour"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:entries="@array/hours" />

		<Spinner
			android:id="@+id/add_lecture_endMinute"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:entries="@array/minutes" />
	</LinearLayout>

	<Button
		android:id="@+id/button"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:layout_margin="5dp"
		android:background="?attr/colorPrimary"
		android:onClick="addLecture"
		android:text="@string/add_lecture_insert"
		android:textColor="@color/cardview_light_background"
		android:textSize="12sp" />

	<Button
		android:id="@+id/button2"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:layout_margin="5dp"
		android:background="@android:color/holo_red_dark"
		android:text="@android:string/cancel"
		android:textColor="@color/cardview_light_background"
		android:onClick="cancel"
		android:textSize="12sp" />

</LinearLayout>